# mata

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  NOTICE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md  pyproject.toml  verify_install.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
.mata/: models.yaml
docs/: CLIP_QUICK_START.md  COMPETITIVE_ANALYSIS_GRAPH_SYSTEMS.md  GRAPH_API_REFERENCE.md  GRAPH_COOKBOOK.md  GRAPH_SYSTEM_GUIDE.md  KACA_README.md  MATA_MultiTask_Vision_Architecture.md  OCR_IMPLEMENTATION_SUMMARY.md  REAL_WORLD_SCENARIOS.md  STATUS.md  TASKS_TORCHVISION_KACA_INTEGRATION.md  VALIDATION_GUIDE.md  VALKEY_GUIDE.md  VLM_TOOL_CALLING_SUMMARY.md  ZEROSHOT_DETECTION_GUIDE.md
examples/: README.md  validation.py
examples/classify/: basic_classification.py  clip_zeroshot.py
examples/configs/: coco.yaml  coco_text.yaml  diode.yaml  imagenet.yaml  torchvision_aliases.yaml  torchvision_detection.yaml
examples/depth/: basic_depth.py
examples/detect/: basic_detection.py  torchvision_detection.py  zeroshot_detection.py
examples/graph/: README.md  parallel_tasks.py  presets_demo.py  simple_pipeline.py  valkey_pipeline.py  valkey_rtsp_pipeline.py  video_tracking.py  vlm_workflows.py
examples/graph/scenarios/: README.md  agriculture_aerial_crop.py  agriculture_disease_classify.py  agriculture_pest_detection.py  driving_distance_estimation.py  driving_obstacle_vlm.py  driving_road_scene.py  driving_traffic_tracking.py  manufacturing_assembly_verify.py  manufacturing_component_inspect.py  manufacturing_defect_classify.py  manufacturing_defect_segment.py  medical_pathology_triage.py  medical_report_generation.py  medical_roi_segmentation.py  retail_product_search.py  retail_shelf_analysis.py  retail_stock_level.py  security_crowd_monitoring.py  security_situational_awareness.py  security_suspicious_object.py
examples/images/: shoutout.txt
examples/inference/: README.md
examples/segment/: basic_segmentation.py  grounding_sam_pipeline.py  sam_segment.py
examples/tools/: config_aliases.py  models.yaml  onnx_inference.py  save_results.py
examples/track/: basic_tracking.py  cross_camera_reid.py  persist_tracking.py  reid_tracking.py  stream_tracking.py
examples/vlm/: basic_vlm.py  ocr.py
scripts/: build_diode_depth_gt.py  coco_utils.py  convert_imagenet_to_coco.py  generate_imagenet_val_labels.py  smoke_test_coco.py
src/mata/: __init__.py  api.py  visualization.py
src/mata/adapters/: __init__.py  base.py  clip_adapter.py  huggingface_adapter.py  huggingface_classify_adapter.py  huggingface_depth_adapter.py  huggingface_sam_adapter.py  huggingface_segment_adapter.py  huggingface_vlm_adapter.py  huggingface_zeroshot_detect_adapter.py  huggingface_zeroshot_segment_adapter.py  onnx_adapter.py  onnx_base.py  onnx_classify_adapter.py  pipeline_adapter.py  pytorch_adapter.py  pytorch_base.py  pytorch_classify_adapter.py  reid_adapter.py  tensorrt_adapter.py  torchscript_adapter.py  torchscript_classify_adapter.py  torchvision_detect_adapter.py  tracking_adapter.py
src/mata/core/: __init__.py  agent_loop.py  config.py  exceptions.py  image_tools.py  logging.py  mask_utils.py  model_loader.py  model_registry.py  parsers.py  tool_prompts.py  tool_registry.py  tool_schema.py  types.py  video_io.py
src/mata/eval/: __init__.py  confusion_matrix.py  dataset.py  plots.py  printer.py  validator.py
src/mata/nodes/: __init__.py  annotate.py  classify.py  depth.py  detect.py  expand_boxes.py  filter.py  fuse.py  keep_best_mask.py  mask_to_box.py  merge.py  nms.py  ocr.py  promote_entities.py  prompt_boxes.py  prompt_points.py  refine_mask.py  roi.py  segment.py  segment_everything.py  topk.py  track.py  valkey_load.py  valkey_store.py  vlm_describe.py  vlm_detect.py  vlm_query.py
src/mata/presets/: __init__.py  vlm.py  (+9 more)
tests/: conftest.py  run_backward_compat_tests.py  test_adapter_wrappers.py  test_agent_loop.py  test_agent_loop_tracing.py  test_api.py  test_artifact_base.py  test_artifact_converters.py  test_artifact_image.py  test_artifact_task_1_4.py  test_backward_compatibility.py  test_base_adapter.py  test_basetrack_strack.py  test_bbox_from_mask.py  test_bot_sort.py  test_byte_tracker.py  test_capability_protocols.py  test_classify_adapter.py  test_classify_types.py  test_clip_adapter.py  test_conditionals.py  test_config.py  test_converters.py  test_depth_adapter.py  test_depth_metrics.py  test_depth_result.py  test_detections_artifact.py  test_dsl.py  test_eval_ap_per_class.py  test_eval_api.py  test_eval_box_iou.py  test_eval_classify.py  test_eval_dataset.py  test_eval_depth.py  test_eval_detect_metrics.py  test_eval_iou.py  test_eval_metrics.py  test_eval_ocr.py  test_eval_plots.py  test_eval_printer.py  (+69 more)
tests/benchmarks/: test_optimized_scheduler_performance.py
tests/graph/: __init__.py  test_artifacts.py  test_conditionals.py  test_graph_builder.py  test_integration.py  test_node.py  test_providers.py  test_scheduler.py  test_temporal.py  test_validator.py
tests/test_trackers/: __init__.py
(+78 files in other folders)
